Fix bug with small margin on mobile screen.

--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -13,11 +13,11 @@
     flex-direction: column;
     justify-content: center;
     margin-left: 5px;
+    margin-bottom: 90px;
     @media screen and (max-width: 716px) {
-
-/*      justify-content: flex-start;*/
       align-items: center;
     }
+
     .titleContainer {
       @media screen and (max-width: 640px) {
         display: flex;
@@ -27,6 +27,7 @@
         align-items: center;
       }
     }
+
     span {
       @include text(1.2, 24px, 500);
       letter-spacing: 3px;
